instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:1: error: not found: value laisseBrosse
laisseBrosse()
^InstructionsDrawG:2: error: not found: type blue
setCouleurBrosse(c:blue)
                   ^InstructionsDrawG:2: error: not found: value c
setCouleurBrosse(c:blue)
                 ^